--- a/blocks/elements/__info-text/elements__info-text.css
+++ b/blocks/elements/__info-text/elements__info-text.css
@@ -1,6 +1,7 @@
 .elements__info-text {
   color: black;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif, Arial;
+  font-weight: 900;
   line-height: 29px;
   font-size: 24px;
 }
