--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,10 +1,19 @@
 .popup__close {
   position: absolute;
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
   top: -36px;
   right: -36px;
   background: transparent url(../../../images/Close.svg) center no-repeat;
   border: none;
   cursor: pointer;
+}
+
+@media screen and (max-width: 540px) {
+  .popup__close {
+    top: -40px;
+    right: -3px;
+    width: 26px;
+    height: 26px;
+  }
 }
