--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -7,8 +7,10 @@
   position: relative;
   margin: 0 auto;
 }
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 540px) {
   .popup__content {
+    margin: 0 19px;
+    padding: 25px 22px;
     max-width: 282px;
     min-height: 322px;
   }
