--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -3,4 +3,6 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 48px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 400;
 }
