--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,15 +1,21 @@
 .popup__submit {
   width: 100%;
   height: 50px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 400;
   background-color: black;
   color: #fff;
   border: none;
   border-radius: 2px;
   margin-top: 48px;
+  cursor: pointer;
 }
 @media screen and (max-width: 880px) {
   .popup__submit {
     width: 238px;
     height: 46px;
   }
+}
+.popup__submit:hover {
+  opacity: 0.8;
 }
