--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,7 @@
 .popup__title {
   font-size: 24px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 900;
   line-height: 30px;
   color: black;
   margin: 0;
