--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -2,7 +2,8 @@
   font-size: 42px;
   line-height: 48px;
   font-style: normal;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif, Arial;
+  font-weight: 500;
   grid-area: title;
   margin: 0;
   padding-top: 62px;
