--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,7 +5,15 @@
   margin-left: auto;
   margin-right: auto;
   justify-content: space-between;
+  align-items: center;
 }
+
+@media screen and (max-width: 1024px) {
+  .profile {
+    max-width: 500px;
+  }
+}
+
 @media screen and (max-width: 544px) {
   .profile {
     flex-direction: column;
