--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,6 +6,15 @@
   max-width: 880px;
   margin: 50px auto 68px;
 }
+
+@media screen and (max-width: 1024px) {
+  .elements {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    max-width: 580px;
+  }
+}
+
 @media screen and (max-width: 544px) {
   .elements {
     min-width: 288px;
