--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,14 @@
 .header {
-  border: solid 1px;
-  border-color: #545454;
-
+  border: solid 1px rgba(84, 84, 84, 0.7);
   border-top: none;
   border-left: none;
   border-right: none;
   color: white;
   max-width: 880px;
   margin: 119px auto 0;
+}
+@media screen and (max-width: 544px) {
+  .header {
+    margin-top: 28px;
+  }
 }
