--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  font-family: "Inter", sans-serif, Arial;
+  font-family: "Inter", Arial, sans-serif;
   background-color: #000000;
   color: #ffffff;
   box-sizing: border-box;
