--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,9 +1,8 @@
 .popup__content {
   background-color: #fff;
   border-radius: 10px;
-  padding: 34px 36px;
-  max-width: 430px;
-  min-height: 330px;
+  padding: 36px;
+  max-width: 358px;
   position: relative;
   margin: 0 auto;
 }
@@ -12,6 +11,5 @@
     margin: 0 19px;
     padding: 25px 22px;
     max-width: 282px;
-    min-height: 322px;
   }
 }
