--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,8 +1,10 @@
 .popup__submit {
   width: 100%;
   height: 50px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
   background-color: black;
   color: #fff;
   border: none;
@@ -14,6 +16,8 @@
   .popup__submit {
     width: 238px;
     height: 46px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
 .popup__submit:hover {
