--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,8 +1,14 @@
 .popup__title {
   font-size: 24px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
-  line-height: 30px;
+  line-height: 29px;
   color: black;
   margin: 0;
+}
+@media screen and (max-width: 544px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
