--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
