--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,13 +1,32 @@
 .profile__edit {
   grid-area: button;
+  display: block;
+  border: none;
+  background-color: transparent;
+  background-image: url("../../../images/Edit_Button.svg");
+  background-repeat: no-repeat;
   width: 24px;
   height: 24px;
-  background-color: transparent;
   margin-top: 77px;
   margin-left: 16px;
-  border-color: white;
   padding: 0;
 }
-.profile__edit:hover:hover {
-  opacity: 0.5;
+
+.profile__edit:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.profile__edit:focus-visible {
+  outline: transparent;
+}
+
+@media screen and (max-width: 544px) {
+  .profile__edit {
+    width: 18px;
+    height: 18px;
+    background-size: contain;
+    margin-left: 10px;
+    margin-top: 34px;
+  }
 }
