--- a/blocks/elements/__info/elements__info.css
+++ b/blocks/elements/__info/elements__info.css
@@ -3,8 +3,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
-  max-width: 282px;
+  justify-content: space-between;
+  max-width: 246px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
