--- a/blocks/profile/__plus/profile__plus.css
+++ b/blocks/profile/__plus/profile__plus.css
@@ -1,4 +1,8 @@
 .profile__plus {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: baseline;
   background-color: transparent;
   background-image: url(../../../images/plus.svg);
   background-repeat: no-repeat;
