--- a/blocks/elements/__info-button/elements__info-button.css
+++ b/blocks/elements/__info-button/elements__info-button.css
@@ -1,6 +1,15 @@
 .elements__info-button {
   border: none;
   background-color: transparent;
+  background: url(../../../images/heart.svg) no-repeat;
+
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  border: none;
+  padding: 0;
+  height: 19px;
+  width: 21px;
 }
 .elements__info-button:hover {
   cursor: pointer;
