--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
 @import url(../blocks/elements/__info/elements__info.css);
 @import url(../blocks/elements/__info-text/elements__info-text.css);
 @import url(../blocks/elements/__info-button/elements__info-button.css);
+@import url(../blocks/elements/__info-button/_active/elements__info-button_active.css);
 @import url(../blocks/elements/__pic/elements__pic.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
@@ -27,3 +28,12 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/elements/__delete/elements__delete.css);
+@import url(../blocks/add/add.css);
+@import url(../blocks/add/_open/add_open.css);
+@import url(../blocks/add/__content/add__content.css);
+@import url(../blocks/add/__close/add__close.css);
+@import url(../blocks/add/__title/add__title.css);
+@import url(../blocks/add/__form/add__form.css);
+@import url(../blocks/add/__input/add__input.css);
+@import url(../blocks/add/__submit/add__submit.css);
