--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url(../vendor/normalize/normalize.css);
+@import url(../vendor/normalize.css);
 @import url(../vendor/font/font.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
