--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,12 +1,16 @@
 .popup {
   font-family: "Inter", Arial, sans-serif;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.6);
   position: fixed;
   bottom: 0;
   top: 0;
   left: 0;
   right: 0;
-  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity ease-out 0.5s, visibility 0s ease-out 0.5s linear;
 }
