--- a/blocks/popup/_open/popup_open.css
+++ b/blocks/popup/_open/popup_open.css
@@ -1,6 +1,5 @@
 .popup_open {
-  display: flex;
   opacity: 1;
   visibility: visible;
-  transition: visibility 0s, opacity 0.6s;
+  transition: opacity 0.6s ease-out, visibility 0s ease-out;
 }
