--- a/pages/index.css
+++ b/pages/index.css
@@ -32,3 +32,6 @@
 @import url(../blocks/popup/__caption/popup__caption.css);
 @import url(../blocks/popup/__content/_type/popup__content_type_image.css);
 @import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__input/popup__input-error.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error-active.css);
