--- a/blocks/popup/__input/_type/popup__input_type_error.css
+++ b/blocks/popup/__input/_type/popup__input_type_error.css
@@ -1,9 +1,8 @@
 .popup__input_type_error {
+  font-style: normal;
+  font-weight: normal;
   font-size: 12px;
+  line-height: 15px;
   color: red;
   opacity: 0;
-  position: absolute;
-  top: calc(100% + 6px);
-  left: 0;
-  transition: 0.3s;
 }
