--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,4 @@
 @import url(../blocks/popup/__input/popup__input-error.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error-active.css);
+@import url(../blocks/popup/__submit/_disabled/popup__submit_disabled.css);
