--- a/src/blocks/elements/__info/elements__info.css
+++ b/src/blocks/elements/__info/elements__info.css
@@ -1,12 +1,11 @@
 .elements__info {
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+	background-color: #ffffff;
+	display: flex;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	margin: 0;
+	padding: 0;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
