--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -36,3 +36,6 @@
 @import url(../blocks/popup/__submit/_disabled/popup__submit_disabled.css);
 @import url(../blocks/popup/__error/popup__error.css);
 @import url(../blocks/popup/__error/_active/popup__error_active.css);
+@import url(../blocks/elements/__counter/elements__counter.css);
+@import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/popup/__content/_type/popup__content_type_delete.css);
