edit profile picture

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,12 +1,14 @@
 .profile__avatar {
-  display: flex;
+	display: flex;
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	position: relative;
 }
 @media screen and (max-width: 1024px) {
-  .profile__avatar {
-    max-width: 282px;
-    width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+	.profile__avatar {
+		max-width: 282px;
+		width: 100%;
+		flex-direction: column;
+	}
 }
