--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,14 +1,13 @@
 .profile__info {
-  display: grid;
-  justify-content: center;
-  align-content: flex-start;
-  grid-template-areas:
-    "title button"
-    "subtext subtext";
-  padding-left: 30px;
+	display: grid;
+	justify-content: flex-start;
+	align-content: flex-start;
+	grid-template-areas:
+		"title button"
+		"subtext subtext";
 }
 @media screen and (max-width: 544px) {
-  .profile__info {
-    padding-left: 0;
-  }
+	.profile__info {
+		padding-left: 0;
+	}
 }
