--- a/src/blocks/profile/__change-photo/profile__change-photo.css
+++ b/src/blocks/profile/__change-photo/profile__change-photo.css
@@ -1,11 +1,14 @@
 .profile__change-photo {
-	position: absolute;
 	background-image: url(../../../images/changeProfile.svg);
 	background-color: transparent;
-	width: 26px;
+	background-position: 50%;
+	background-repeat: no-repeat;
+	border: none;
 	height: 26px;
+	left: 40%;
+	margin: 0;
+	padding: 0;
+	position: absolute;
 	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
+	width: 26px;
 }
