--- a/src/blocks/profile/__overlay/profile__overlay.css
+++ b/src/blocks/profile/__overlay/profile__overlay.css
@@ -1,9 +1,16 @@
 .profile__overlay {
-	transition: 0.3s ease;
-	position: relative;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
 	opacity: 0;
+	transition: 0.3s ease;
+	background-color: rgba(0, 0, 0, 0.8);
 }
+
 .profile__overlay:hover {
-	background-color: rgba(0, 0, 0);
-	opacity: 0.8;
+	opacity: 1;
 }
